# tzf-web

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  download-deps.sh  go.mod  go.sum  index.html  simple.html  sitemap.xml  typos.toml  update_sitemap.sh
.github/workflows/: publish.yml  rust.yml
cmd/gen-tz-polygons/: main.go
cmd/static-server/: main.go
src/: lib.rs
static/: index.html  simple.html  sitemap.xml
static/timezone-polygons/: Africa-Abidjan.geojson  Africa-Accra.geojson  Africa-Addis_Ababa.geojson  Africa-Algiers.geojson  Africa-Asmara.geojson  (+439 more)
static/timezone-polygons-index/: Africa-Abidjan.geojson  Africa-Accra.geojson  Africa-Addis_Ababa.geojson  Africa-Algiers.geojson  Africa-Asmara.geojson  Africa-Bamako.geojson  Africa-Bangui.geojson  Africa-Bissau.geojson  Africa-Blantyre.geojson  Africa-Brazzaville.geojson  Africa-Bujumbura.geojson  Africa-Cairo.geojson  Africa-Casablanca.geojson  Africa-Conakry.geojson  Africa-Dakar.geojson  Africa-Dar_es_Salaam.geojson  Africa-Djibouti.geojson  Africa-Douala.geojson  Africa-El_Aaiun.geojson  Africa-Freetown.geojson  Africa-Gaborone.geojson  Africa-Harare.geojson  Africa-Johannesburg.geojson  Africa-Juba.geojson  Africa-Kampala.geojson  Africa-Khartoum.geojson  Africa-Kigali.geojson  Africa-Kinshasa.geojson  Africa-Lagos.geojson  Africa-Libreville.geojson  Africa-Lome.geojson  Africa-Luanda.geojson  Africa-Lubumbashi.geojson  Africa-Lusaka.geojson  Africa-Malabo.geojson  Africa-Maputo.geojson  Africa-Maseru.geojson  Africa-Mbabane.geojson  Africa-Mogadishu.geojson  Africa-Monrovia.geojson  (+311 more)
(+8 files in other folders)
