[package]
name = "tzf-web"
version = "0.1.0"
authors = ["ringsaturn <ringsaturn.me@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.84"
tzf-rs = { version = "0.4.9", default-features = false }

getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
